# VideoDuplicateCheck

./: .gitignore  GITHUB_UPLOAD_CHECKLIST.md  README.md  pyproject.toml  requirements.txt
packaging/: version_info.txt
scripts/: build_onedir.bat  build_onefile.bat  clean_build.bat
src/: app.py  config.py  main.py
src/core/: comparator.py  database.py  fingerprint.py  hasher.py  scanner.py
src/gui/: main_window.py  preview_widget.py  result_panel.py  scan_panel.py  settings_dialog.py
src/utils/: file_utils.py  video_info.py
src/video_duplicate_check.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/workers/: compare_worker.py  scan_worker.py
tests/: test_comparator.py  test_compare_worker.py  test_database.py  test_hasher.py  test_scan_worker.py  test_scanner.py
